django-postgres-app/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-deployment
  labels:
    app: django-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: django-app
  template:
    metadata:
      labels:
        name: django-app
    spec:
      containers:
        - name: django-app
          image: sas792/devops-django:1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
# START Service
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
  labels:
    app: django-app
spec:
  selector:
    name: django-app
  ports:
    - port: 8000 #port that the service exposes
      targetPort: 8000 #port that the app is receiving requests from via the pod

# END SERVICE
