django-postgres-app/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgres
  template:
    metadata:
      labels:
        name: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
---
# START Service
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: postgres
spec:
  selector:
    name: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432 
# END SERVICE
