django-postgres-app/django-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: django-ingress
# spec:
#   rules:
#     - host: devops-dic2-git.com
#       http:
#         paths:
#           - path: /
#             backend:
#               serviceName: django-app-service
#               servicePort: 8001
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
    - host: devops-dic2-git.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: djnago-app-service
                port:
                  number: 8001
